fix toplistCatalog item spacing and sizing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,26 +13,6 @@
     align-items: center;
 }
 
-.overlay-container {
-    position: relative;
-    width: 175px;
-    height: 175px;
-    margin-bottom: 10px;
-}
-
-.overlay-container .overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 2;
-    transition: background-color 0.3s ease;
-}
-
-.overlay-container:hover .overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
 .dynamic-text {
     display: inline-block;
     width: 200px;
@@ -53,4 +33,35 @@
     50% {
         opacity: 0;
     }
+}
+
+.square-container {
+    width: 100%;
+    padding-bottom: 100%; /* Maintain a square aspect ratio */
+    position: relative;
+}
+
+.square-container > * {
+    position: absolute;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 0.3s ease;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.square-container:hover .overlay {
+    background: rgba(0, 0, 0, 0.7);
+    cursor: pointer;
 }
